# hello-rust-todo

./: .env.local  .gitignore  docker-compose.yaml  generate_models.sh
client/: package-lock.json
docker/mysql/: Dockerfile
docker/mysql/conf.d/: my.cnf
migrations/: 2023-05-05_08:10.sql
server/: Cargo.toml
server/src/: main.rs
server/src/dtos/: todo.rs
server/src/entities/: mod.rs  prelude.rs  sea_orm_active_enums.rs  todo.rs  user.rs
server/src/handlers/: index.rs  mod.rs  todo.rs  user.rs
server/src/io/: mod.rs  todo_io.rs  user_io.rs
server/src/models/: mod.rs  user.rs
server/src/repositories/: todo.rs  user.rs
server/src/services/: todo.rs  user.rs
