[package]
name = "hello-rust-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
axum = { version = "0.6.12", features = ["default"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
chrono = "0.4.24"
dotenv = "0.15.0"
sea-orm = { version = "0.11.2", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.27.0", features = ["full"] }
anyhow = "1.0.71"
derive-new = "0.5.9"
validator = { version = "0.16.0", features = ["derive"] }
thiserror = "1.0.40"
rust_decimal = "1.29.1"
